force-app/main/default/objects/FEC_Batch_Case_Creation__c/FEC_Batch_Case_Creation__c.object-meta.xml
<CustomObject>
    <label>Batch Case Creation</label>
    <nameField>
        <label>Batch Case Creation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Case Creation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>