force-app/main/default/objects/FEC_Batch_Case_Creation__c/fields/FEC_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>